Implemented Order controller and order endpoints.
